--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mata Mosquito</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/mosca.png" type="image/x-icon">
     <script src="./scripts/jogo.js"></script>
 </head>
@@ -23,8 +25,6 @@
 
 
     <script>
-            document.getElementById('cronometro').innerHTML = DOM.tempo
-
         jogo.init()
     </script>
 </body>
