:sparkles: Correcao cronometro

--- a/fim_de_jogo.html
+++ b/fim_de_jogo.html
@@ -22,7 +22,8 @@
 
         <img class="img-fluid" src="./assets/img/game_over.png" alt="Game Over">
 
-        <button type="button" onclick="window.location.href = 'index.html'" class="btn btn-dark btn-lg">Reiniciar</button>
+        <button type="button" onclick="window.location.href = 'index.html'"
+            class="btn btn-dark btn-lg">Reiniciar</button>
 
     </div>
 
