--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,14 @@
     <title>Mata Mosquito</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/mosca.png" type="image/x-icon">
     <script src="./scripts/jogo.js"></script>
 </head>
-<body>
 
+<body>
 
     <div class="painel-inferior">
         <div class="vidas">
@@ -23,9 +26,9 @@
         <div class="cronometro">Tempo restante: <span id="cronometro"></span></div>
     </div>
 
-
     <script>
         jogo.init()
     </script>
 </body>
+
 </html>
