--- a/fim_de_jogo.html
+++ b/fim_de_jogo.html
@@ -5,13 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!------- CSS Bootstrap ------->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!------- CSS ------->
     <link rel="stylesheet" href="./css/style.css">
+    <!------- Fonts Google ------->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <!------- Favicon ------->
     <link rel="shortcut icon" href="./assets/img/mosca.png" type="image/x-icon">
     <title>Game Over</title>
 </head>
