--- a/index.html
+++ b/index.html
@@ -5,30 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mata Mosquito</title>
+    <!------- CSS Bootstrap ------->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!------- CSS ------->
     <link rel="stylesheet" href="./css/style.css">
+    <!------- Fonts Google ------->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <!------- Favicon ------->
     <link rel="shortcut icon" href="./assets/img/mosca.png" type="image/x-icon">
     <script src="./scripts/jogo.js"></script>
+    <title>Mata Mosquito</title>
 </head>
 
 <body>
 
-    <div class="painel-inferior">
-        <div class="vidas">
-            <img id="v1" src="./assets/img/coracao_cheio.png" alt="">
-            <img id="v2" src="./assets/img/coracao_cheio.png" alt="">
-            <img id="v3" src="./assets/img/coracao_cheio.png" alt="">
+    <div class="container">
+
+        <img class="img-fluid" src="./assets/img/game.png" alt="Game">
+
+        <div class="box-level">
+            <select class="form-control mb-2" id="nivel">
+                <option value="">-- Selecione o nível --</option>
+                <option value="normal">Normal</option>
+                <option value="dificil">Difícil</option>
+                <option value="muitoDificil">Muito Difícil</option>
+            </select>
         </div>
-        <div class="cronometro">Tempo restante: <span id="cronometro"></span></div>
+
+        <button type="button" onclick="jogo.defineNivelJogo()" class="btn btn-danger btn-lg">Iniciar jogo</button>
+
     </div>
 
-    <script>
-        jogo.init()
-    </script>
 </body>
 
 </html>
