--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <option value="">-- Selecione o nível --</option>
                 <option value="normal">Normal</option>
                 <option value="dificil">Difícil</option>
-                <option value="muitoDificil">Muito Difícil</option>
+                <option value="muitoDificil">Chuck Norris</option>
             </select>
         </div>
 
